Implemented looting enchantment (#2188)
* Implemented looting enchantment

* Initial work for looting enchantement

* Refactored new drop system (part 1)

* Refactored new drop system (part 2)

* Useless import

* Codacy fixes

* Removed unnecessary empty lines

---------

Co-authored-by: Buddelbubi <44944269+Buddelbubi@users.noreply.github.com>